[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/TromboneAttack.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NoteB1.tscn" type="PackedScene" id=2]

[node name="TromboneAttack" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Note1" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.00012207, 257.024 )

[node name="Note2" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.00012207, 488.85 )
[connection signal="tree_exited" from="Note1" to="." method="_on_Note1_tree_exited"]
[connection signal="tree_exited" from="Note2" to="." method="_on_Note2_tree_exited"]
